# fastapi-project-cli-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  LICENSE  README.md  config.yaml  dockerfile  gunicorn_conf.py  logging.ini  main.py  makefile  pyproject.toml
{{cookiecutter.project_slug}}/scripts/: run.sh
{{cookiecutter.project_slug}}/src/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/api/: __init__.py
{{cookiecutter.project_slug}}/src/api/v1/: __init__.py
{{cookiecutter.project_slug}}/src/chat_bot/: __init__.py
{{cookiecutter.project_slug}}/src/chat_bot/api/: __init__.py
{{cookiecutter.project_slug}}/src/chat_bot/core/: __init__.py  chat.py  constants.py  dependencies.py  exceptions.py
{{cookiecutter.project_slug}}/src/chat_bot/middleware/: __init__.py  super_agent_hooks.py
{{cookiecutter.project_slug}}/src/chat_bot/models/: __init__.py
{{cookiecutter.project_slug}}/src/chat_bot/repositories/: __init__.py
{{cookiecutter.project_slug}}/src/chat_bot/services/: __init__.py  chat_bot_service.py
{{cookiecutter.project_slug}}/src/chat_bot/utils/: __init__.py  common.py  decorators.py
{{cookiecutter.project_slug}}/src/clients/: __init__.py  llm_client.py
{{cookiecutter.project_slug}}/src/config/: __init__.py  app_config.py  logging_config.py
{{cookiecutter.project_slug}}/src/core/: __init__.py
{{cookiecutter.project_slug}}/src/core/chatbot/: __init__.py  chat.py  constants.py  database.py  exceptions.py
{{cookiecutter.project_slug}}/src/exceptions/: app_exception.py
{{cookiecutter.project_slug}}/src/middleware/: __init__.py  super_agent_hooks.py
{{cookiecutter.project_slug}}/src/models/: __init__.py
{{cookiecutter.project_slug}}/src/repositories/: __init__.py
{{cookiecutter.project_slug}}/src/services/: __init__.py  chatbot_service.py
{{cookiecutter.project_slug}}/src/utils/: __init__.py  common.py  decorators.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/api/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/core/: __init__.py  chat.py  constants.py  exceptions.py  security.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/middleware/: super_agent_hooks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/models/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/repositories/: __init__.py
{{cookiecutter.project_slug}}/tests/: test_client.py
(+21 files in other folders)
